--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,3 +305,28 @@ footer a {
     margin-right: auto;
   }
 }
+
+@media print {
+  header,
+  footer,
+  aside,
+  iframe,
+  section {
+    display: none;
+  }
+
+  body {
+    font-size: 21.5px;
+    border: transparent;
+  }
+
+  #badgeImg {
+    float: left;
+    width: 9%;
+    margin-right: 10px;
+  }
+
+  caption {
+    margin-top: 43px;
+  }
+}
